[gd_scene load_steps=6 format=2]

[ext_resource path="res://Lever.gd" type="Script" id=1]
[ext_resource path="res://scroll_bg_cloud_2.png" type="Texture" id=2]
[ext_resource path="res://scroll_bg_cloud_1.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 12.5504, 10 )

[node name="Lever" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
animation = "off"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -3.40976, -0.913229 )
scale = Vector2( 1.37556, 1.50324 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Lever_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_Lever_body_exited"]

[connection signal="hit" from="." to="." method="_on_Lever_hit"]


